<resources>
    <string name="app_name">KursWork</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="users">Users</string>
    <string name="students">Students</string>
    <string name="professors">Professors</string>
    <string name="group">Group</string>
    <string name="news">News</string>
    <string name="isblocked">isblocked</string>
    <string name="date">date</string>
    <string name="name">name</string>
    <string name="count">count</string>
    <string name="faculty">faculty</string>
    <string name="title">title</string>
    <string name="small_description">small_description</string>
    <string name="full_description">full_description</string>
    <string name="surname">surname</string>
    <string name="middlename">middlename</string>
    <string name="position">position</string>
    <string name="warning">Внимание</string>
    <string name="professor">Professor</string>
    <string name="experience">experience</string>
    <string name="avg_score">avg score</string>
    <string name="send">Отправить</string>
    <string name="del">Удалить</string>
    <string name="upd">Обновить</string>
    <string name="reload">reload</string>
    <string name="reload_info">информация обновлена</string>
    <string name="registration">Регистрация</string>
    <string name="reg_on">Зарегистрироваться</string>
    <string name="exit">Exit</string>
</resources>
