<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/users"
            android:title="@string/users" />
        <item
            android:id="@+id/students"
            android:title="@string/students" />
        <item
            android:id="@+id/professors"
            android:title="@string/professors" />
        <item
            android:id="@+id/group"
            android:title="@string/group" />
        <item
            android:id="@+id/news"
            android:title="@string/news" />
        <item
            android:id="@+id/exit"
            android:title="@string/exit" />

    </group>

</menu>
